Bug 419590 - Widgets change their position on desktop and shrink themselves when I change desktop layout from Folder to Desktop or vice versa
Summary: Widgets change their position on desktop and shrink themselves when I change ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: 5.27.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
: 428609 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-04-03 14:21 UTC by Patrick Silva
Modified: 2025-01-16 22:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
changing from Desktop to Folder layout (2.83 MB, video/webm)
2020-04-03 14:21 UTC, Patrick Silva
Details
changing from Folder to Desktop layout (3.17 MB, video/webm)
2020-04-03 14:22 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-04-03 14:21:19 UTC
Created attachment 127236 [details]
changing from Desktop to Folder layout

SUMMARY
I can only reproduce this behavior if I have two or more widgets on desktop.
Notes widget shrinks more each time I switch the desktop layout.
My icons are arranged in columns and aligned to right but this behavior also occurs
when icons are arranged in rows and aligned to left.
Watch the attached screen recording please.

STEPS TO REPRODUCE
1. add analog clock and notes widgets to your desktop
2. increase the size of Notes widget
3. change desktop layout

EXPECTED RESULT
widgets size and position on desktop should not change

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.2
Comment 1 Patrick Silva 2020-04-03 14:22:56 UTC
Created attachment 127237 [details]
changing from Folder to Desktop layout
Comment 2 Patrick Silva 2020-04-03 14:32:10 UTC
(In reply to Patrick Silva from comment #0)
> I can only reproduce this behavior if I have two or more widgets on desktop.

Shrinking can only be reproduced if I have two or more widgets on desktop.
Widget position changes even if I only have Notes widget on desktop.
Comment 3 Patrick Silva 2020-12-10 21:57:09 UTC
*** Bug 428609 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2023-04-10 00:13:36 UTC
Is it still happening in Plasma 5.27.4?
Comment 5 Patrick Silva 2023-04-10 00:18:04 UTC
(In reply to Nate Graham from comment #4)
> Is it still happening in Plasma 5.27.4?

Yes.

Operating System: Arch Linux 
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.8
Graphics Platform: Wayland
Comment 6 Nate Graham 2025-01-15 20:40:25 UTC
*** Bug 496886 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2025-01-15 22:11:47 UTC
Can reproduce.
Comment 8 Bug Janitor Service 2025-01-16 13:42:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5079
Comment 9 Marco Martin 2025-01-16 14:05:05 UTC
Git commit 3a0a24c6e3f4dd2e0d6f5ba57cd4770ed1862ea0 by Marco Martin.
Committed on 16/01/2025 at 13:40.
Pushed by mart into branch 'master'.

plasmashell: fix applets positions after containment switch

When switching between containment types for instance between desktop and
folderview, make sure to copy over all the ItemGeometries entries, before
re-adding the applets, which are used to save the applets geometries on screen

M  +10   -2    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/3a0a24c6e3f4dd2e0d6f5ba57cd4770ed1862ea0
Comment 10 Marco Martin 2025-01-16 14:20:40 UTC
Git commit fd1b861111dc63e0e08b36edbfb23cc0a5f93d74 by Marco Martin.
Committed on 16/01/2025 at 14:05.
Pushed by mart into branch 'Plasma/6.3'.

plasmashell: fix applets positions after containment switch

When switching between containment types for instance between desktop and
folderview, make sure to copy over all the ItemGeometries entries, before
re-adding the applets, which are used to save the applets geometries on screen


(cherry picked from commit 3a0a24c6e3f4dd2e0d6f5ba57cd4770ed1862ea0)

3a0a24c6 plasmashell: fix applets positions after containment switch

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +10   -2    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/fd1b861111dc63e0e08b36edbfb23cc0a5f93d74