plasmashell: fix applets positions after containment switch

When switching between containment types for instance between desktop and
folderview, make sure to copy over all the ItemGeometries entries, before
re-adding the applets, which are used to save the applets geometries on screen

BUG:419590


(cherry picked from commit 3a0a24c6e3f4dd2e0d6f5ba57cd4770ed1862ea0)

3a0a24c6 plasmashell: fix applets positions after containment switch

Co-authored-by: Marco Martin <notmart@gmail.com>